--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,13 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="MatLightNoActionBar" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
+
     <style name="MediumWhiteCenter" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -19,6 +15,7 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20sp</item>
     </style>
+
     <style name="LargeWhiteCenter" parent="@android:style/TextAppearance.Large">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -27,9 +24,11 @@
         <item name="android:textSize">40sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="TitleWhiteCenter" parent="LargeWhiteCenter">
         <item name="android:textSize">30sp</item>
     </style>
+
     <style name="CenterTrnspBg">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -37,4 +36,5 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:clickable">true</item>
     </style>
+
 </resources>
