migrated all xmls from xamarin

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/dob_bg">
+    android:background="@drawable/gender_bg">
     <TextView
         android:text="Tell us more about yourself"
         android:id="@+id/genderTitle"
@@ -19,40 +19,41 @@
         android:layout_centerInParent="true"
         android:paddingTop="50dp"
         android:layout_marginTop="200dp"
-        android:id="@+id/dob_title">
+        android:id="@+id/teacher_contact_title">
         <TextView
-            android:text="Date of Birth"
+            android:text="Contact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="bottom"
-            android:id="@+id/teacher_gender_text"
+            android:id="@+id/teacher_contact_text"
             android:textAppearance="@android:style/TextAppearance.Material.Display1"
             android:paddingLeft="25dp"
             android:paddingTop="15dp" />
         <ImageView
-            android:src="@drawable/cake"
+            android:src="@drawable/telephone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:id="@+id/teacher_gender_imgview"
             android:scaleType="fitCenter" />
     </LinearLayout>
-    <Button
-        android:text="Choose a date"
+    <EditText
+        android:inputType="phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_select_date"
-        android:layout_below="@id/dob_title"
-        android:gravity="center"
-        android:contextClickable="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_below="@id/teacher_contact_title"
+        android:id="@+id/teacher_contact_number"
+        android:layout_weight="2"
+        android:singleLine="true"
+        android:phoneNumber="true"
+        android:width="150dp"
+        android:layout_marginLeft="25dp" />
     <ImageButton
-        android:id="@+id/dobNext"
-        android:src="@drawable/next_button"
+        android:id="@+id/contactNext"
+        android:src="@drawable/tick"
         style="@style/CenterTrnspBg"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
-        android:onClick="gotoContact"/>
+        android:onClick="gotoSelClass"/>
 </RelativeLayout>
