--- a/app/src/main/res/layout/activity_app_language.xml
+++ b/app/src/main/res/layout/activity_app_language.xml
@@ -34,5 +34,5 @@
         style="@style/CenterTrnspBg"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
-        android:onClick="gotoGender"/>
+        android:onClick="gotoLocation"/>
 </RelativeLayout>
