--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -55,5 +55,5 @@
         style="@style/CenterTrnspBg"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
-        android:onClick="gotoSelClass"/>
+        android:onClick="gotoSelSch"/>
 </RelativeLayout>
