--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -1,48 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/class_students_bg">
+    android:layout_height="wrap_content"
+    android:background="@drawable/rectangle_bg">
     <TextView
-        android:text="Students in your Class                            "
-        android:id="@+id/intro2"
+        android:text="Add a Student"
+        android:id="@+id/heading"
         style="@style/MediumWhiteCenter"
         android:layout_marginTop="50dp"
         android:layout_alignParentTop="true"
-        android:gravity="center" />
-    <ImageButton
-        android:id="@+id/btnAddStudents"
-        android:src="@drawable/add"
-        style="@style/CenterTrnspBg"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:onClick=""/>
+        android:paddingLeft="25dp"
+        android:gravity="left" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        style="@style/SmallWhiteCenter"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:gravity="left"
+        android:paddingLeft="25dp"
+        android:id="@+id/rollNo"
+        android:hint="Roll No."
+        android:layout_marginTop="10dp"
+        android:textColorHint="#CCCCCC"
+        android:textColorLink="@android:color/white"
+        android:layout_below="@+id/heading"
+        android:layout_alignParentStart="true" />
+
+
+    <Spinner
+        android:id="@+id/Gender"
+        android:layout_width="match_parent"
+        style="@style/SmallWhiteCenter"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:entries="@array/gender_dropdown_array"
+        android:layout_alignBaseline="@+id/genderText"
+        android:layout_alignBottom="@+id/genderText"
+        android:layout_toEndOf="@+id/rollNo"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="22dp"
+        android:animateLayoutChanges="false"
+        android:animationCache="false"
+        android:clipToPadding="false" />
 
     <TextView
-        android:text="Looks like your class is empty!\nGo ahead and add students."
+        android:text="Gender"
+        android:id="@+id/genderText"
+        style="@style/SmallWhiteCenter"
+        android:paddingLeft="25dp"
+        android:gravity="left"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/rollNo"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="18dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        style="@style/SmallWhiteCenter"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:gravity="left"
+        android:paddingLeft="25dp"
+        android:id="@+id/Name"
+        android:hint="Name"
+        android:textColorHint="#CCCCCC"
+        android:textColorLink="@android:color/white"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="22dp"
-        android:id="@+id/addStudentMsg"
-        />
+        app:srcCompat="@drawable/done_copy"
+        android:id="@+id/imageView"
+        android:layout_alignBottom="@+id/Gender"
+        android:layout_alignEnd="@+id/genderText" />
 
-    <Button
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="VIEW STUDENTS"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/btnViewClassroomStudents"
-        android:textColor="#ff5aa6f0"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="83dp"
-        android:visibility="invisible"
-        />
 </RelativeLayout>
