--- a/app/src/main/res/layout/activity_app_language.xml
+++ b/app/src/main/res/layout/activity_app_language.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,7 @@
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true" />
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/lang_list"
         android:entries="@array/app_locale"
         android:layout_width="200dp"
         android:layout_height="180dp"
@@ -26,8 +27,10 @@
         android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true"
         android:fadingEdge="none"
-        android:divider="#ffffffff"
-        android:dividerHeight="0.5dp" />
+        android:divider="#ffffff"
+        android:dividerHeight="0.5dp"
+        android:choiceMode="singleChoice"
+        android:listSelector="?android:attr/colorBackground"/>
     <ImageButton
         android:id="@+id/langNext"
         android:src="@drawable/next_button"
