--- a/app/src/main/res/layout/activity_dob.xml
+++ b/app/src/main/res/layout/activity_dob.xml
@@ -38,20 +38,23 @@
             android:id="@+id/teacher_gender_imgview"
             android:scaleType="fitCenter" />
     </LinearLayout>
-    <Button
-        android:text="Choose a date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_select_date"
-        android:layout_below="@id/dob_title"
-        android:gravity="center"
-        android:contextClickable="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+
     <ImageButton
         android:src="@drawable/next_button"
         style="@style/CenterTrnspBg"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
-        android:onClick="gotoContact"/>
-</RelativeLayout>
+        android:onClick="gotoContact"
+        android:id="@+id/imageButton" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="pick a date"
+        android:id="@+id/button2"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/dob_title"
+        android:layout_alignParentStart="true"
+        android:onClick="showDatePickerDialog" />
+ </RelativeLayout>
