--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -8,14 +8,13 @@
     android:layout_width="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_bg"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/heading"
             style="@style/MediumWhiteCenter"
@@ -25,73 +24,67 @@
             android:paddingLeft="25dp"
             android:text="Add a Student" />
 
-        <EditText
-            android:id="@+id/rollNo"
-            style="@style/SmallWhiteCenter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/heading"
-            android:layout_marginTop="10dp"
-            android:gravity="left"
-            android:hint="Roll No."
-            android:inputType="number"
-            android:paddingLeft="25dp"
-            android:textColorHint="#CCCCCC"
-            android:textColorLink="@android:color/white" />
-
-
-        <Spinner
-            android:id="@+id/Gender"
-            style="@style/SmallWhiteCenter"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/genderText"
-            android:layout_alignBottom="@+id/genderText"
-            android:layout_marginStart="95dp"
-            android:layout_marginTop="22dp"
-            android:layout_toEndOf="@+id/rollNo"
-            android:animateLayoutChanges="false"
-            android:animationCache="false"
-            android:clipToPadding="false"
-            android:entries="@array/gender_dropdown_array"
-            android:textColor="@android:color/white" />
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/studRollNo"
+                style="@style/SmallWhiteCenter"
+                android:layout_width="wrap_content"
+                android:layout_alignParentStart="true"
+                android:hint="Roll No."
+                android:inputType="number"
+                android:paddingLeft="25dp"
+                android:textColorHint="#CCCCCC"
+                android:layout_weight="1"
+                android:textColorLink="@android:color/white" />
+            <EditText
+                android:id="@+id/studName"
+                style="@style/SmallWhiteCenter"
+                android:layout_width="wrap_content"
+                android:hint="Name"
+                android:paddingLeft="25dp"
+                android:textColorHint="#CCCCCC"
+                android:layout_weight="4"
+                android:textColorLink="@android:color/white" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/genderText"
-            style="@style/SmallWhiteCenter"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/rollNo"
-            android:layout_marginEnd="18dp"
-            android:layout_marginTop="22dp"
-            android:gravity="left"
-            android:paddingLeft="25dp"
-            android:text="Gender" />
-
-        <EditText
-            android:id="@+id/Name"
-            style="@style/SmallWhiteCenter"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:gravity="left"
-            android:hint="Name"
-            android:inputType="number"
-            android:paddingLeft="25dp"
-            android:textColorHint="#CCCCCC"
-            android:textColorLink="@android:color/white" />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/genderText"
+                style="@style/SmallWhiteCenter"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="22dp"
+                android:paddingLeft="25dp"
+                android:text="Gender"
+                android:layout_weight="1"/>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/Gender"
-            android:layout_alignEnd="@+id/genderText"
-            app:srcCompat="@drawable/done_copy" />
+            <Spinner
+                android:id="@+id/studGender"
+                style="@style/SmallWhiteCenter"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="22dp"
+                android:animateLayoutChanges="false"
+                android:animationCache="false"
+                android:clipToPadding="false"
+                android:entries="@array/gender_dropdown_array"
+                android:textColor="@android:color/white"
+                android:layout_weight="3"/>
 
+            <ImageButton
+                android:src="@drawable/done_copy"
+                android:layout_marginTop="22dp"
+                style="@style/CenterTrnspBg"
+                android:onClick="addStudent"
+                android:layout_toRightOf="@id/studGender"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
