added class data screens

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -39,14 +39,14 @@
             android:scaleType="fitCenter" />
     </LinearLayout>
     <EditText
-        android:inputType="phone"
+        android:inputType="number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/teacher_contact_title"
         android:id="@+id/teacher_contact_number"
         android:layout_weight="2"
+        android:hint="Phone Number"
         android:singleLine="true"
-        android:phoneNumber="true"
         android:width="150dp"
         android:layout_marginLeft="25dp" />
     <ImageButton
