--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -30,7 +30,9 @@
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/studRollNo"
+                android:layout_marginTop="22dp"
                 style="@style/SmallWhiteCenter"
+                android:windowSoftInputMode="stateHidden"
                 android:layout_width="wrap_content"
                 android:layout_alignParentStart="true"
                 android:hint="Roll No."
@@ -41,6 +43,7 @@
                 android:textColorLink="@android:color/white" />
             <EditText
                 android:id="@+id/studName"
+                android:layout_marginTop="22dp"
                 style="@style/SmallWhiteCenter"
                 android:layout_width="wrap_content"
                 android:hint="Name"
@@ -68,34 +71,64 @@
                 style="@style/SmallWhiteCenter"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="22dp"
-                android:animateLayoutChanges="false"
-                android:animationCache="false"
-                android:clipToPadding="false"
                 android:entries="@array/gender_dropdown_array"
-                android:textColor="@android:color/white"
                 android:layout_weight="3"/>
 
             <ImageButton
                 android:src="@drawable/done_copy"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="23dp"
                 style="@style/CenterTrnspBg"
                 android:onClick="addStudent"
                 android:layout_toRightOf="@id/studGender"
                 android:layout_weight="1"/>
         </LinearLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            style="@style/GreyContentTitle"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="22dp"
+            android:paddingLeft="30dp"
+            android:textSize="17dp"
+            android:textStyle="bold"
+            android:gravity="left"
+            android:text="Students in your class"
+            android:layout_weight="4"/>
+
+        <TextView
+            style="@style/GreyContentTitle"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="22dp"
+            android:paddingRight="39dp"
+            android:textSize="17dp"
+            android:gravity="right"
+            android:textStyle="bold"
+            android:text="35"
+            android:layout_weight="1"
+            android:paddingBottom="10dp"/>
     </LinearLayout>
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ListView
             android:id="@+id/studentList"
             android:layout_alignParentEnd="true"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
+            android:layout_width="match_parent"
+            android:divider="@null"
+            android:layout_height="300dp" />
     </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/addStudentNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="gotoExplorePath"
+        android:background="@null"
+        android:src="@drawable/next_button"
+        android:layout_gravity="center"/>
 </LinearLayout>
