--- a/app/src/main/res/layout/class_distribution.xml
+++ b/app/src/main/res/layout/class_distribution.xml
@@ -63,11 +63,12 @@
                 android:textSize="30sp"/>
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/mathDistTitle"
-                android:src="@drawable/bar_graph"
-                android:layout_centerHorizontal="true"/>
+                android:layout_marginTop="80dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:src="@drawable/gpa_trend"
+                android:layout_centerHorizontal="true"
+                android:layout_height="150dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
