--- a/app/src/main/res/layout/class_test.xml
+++ b/app/src/main/res/layout/class_test.xml
@@ -36,6 +36,15 @@
                 android:textColor="#0099cc"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="17 Feb 2016"
+                android:textColor="#cdc9c9"
+                android:layout_marginTop="5dp"
+                android:gravity="left"
+                android:layout_weight="1"
+                android:textSize="17sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -44,7 +53,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Min: 31/70"
+                    android:text="Min: 41/70"
                     android:textColor="#00ced1"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
@@ -62,7 +71,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Max: 61/70"
+                    android:text="Max: 65/70"
                     android:textColor="#00ced1"
                     android:gravity="center"
                     android:layout_marginTop="5dp"
@@ -102,6 +111,15 @@
                 android:textColor="#0099cc"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="19 March 2016"
+                android:textColor="#cdc9c9"
+                android:layout_marginTop="5dp"
+                android:gravity="left"
+                android:layout_weight="1"
+                android:textSize="17sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,7 +128,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Min: 31/70"
+                    android:text="Min: 48/70"
                     android:textColor="#00ced1"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
@@ -119,7 +137,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Median: 54/70"
+                    android:text="Median: 57/70"
                     android:textColor="#00ced1"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
@@ -128,7 +146,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Max: 61/70"
+                    android:text="Max: 68/70"
                     android:textColor="#00ced1"
                     android:gravity="center"
                     android:layout_marginTop="5dp"
@@ -169,6 +187,15 @@
                 android:textColor="#0099cc"
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="29 Sept 2016"
+                android:textColor="#cdc9c9"
+                android:layout_marginTop="5dp"
+                android:gravity="left"
+                android:layout_weight="1"
+                android:textSize="17sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
