--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowSoftInputMode">stateHidden</item>
     </style>
 
     <style name="SmallWhiteCenter" parent="@android:style/TextAppearance.Medium">
