--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -108,9 +108,9 @@
             android:layout_marginTop="22dp"
             android:paddingRight="39dp"
             android:textSize="17dp"
+            android:id="@+id/numberOfStudents"
             android:gravity="right"
             android:textStyle="bold"
-            android:text="7"
             android:layout_weight="1"
             android:paddingBottom="10dp"/>
     </LinearLayout>
