Refactor part 1 - move out fb write code and shared pref

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/welcome">
     <TextView
-        android:text="Hey (User)!"
+        android:text="Hey Shweta!"
         android:id="@+id/helloUser"
         style="@style/LargeWhiteCenter"
         android:layout_alignParentTop="true"
