--- a/app/src/main/res/layout/activity_classroom_data.xml
+++ b/app/src/main/res/layout/activity_classroom_data.xml
@@ -6,19 +6,19 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
-<android.support.design.widget.TabLayout
-    android:id="@+id/sliding_tabs"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:tabMode="fixed"
-    android:background="@android:color/holo_blue_light"
-    app:tabTextColor="@android:color/white" />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="scrollable"
+        android:background="@android:color/holo_blue_light"
+        app:tabTextColor="@android:color/white" />
 
-<android.support.v4.view.ViewPager
-    android:id="@+id/viewpager"
-    android:layout_width="match_parent"
-    android:layout_height="0px"
-    android:layout_weight="1"
-    android:background="@android:color/white" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:background="@android:color/white" />
 
 </LinearLayout>
