--- a/app/src/main/res/layout/activity_classroom_data.xml
+++ b/app/src/main/res/layout/activity_classroom_data.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
+    <include android:id="@+id/path_toolbar" layout="@layout/toolbar" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
